<resources>

    <!-- GENERAL -->
    <string name="app_name">CoffeeTracker</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthdate">Birthdate</string>
    <string name="email">Email</string>
    <string name="save">Save</string>

    <!-- Splash Screen -->
    <string name="logo">logo</string>

    <!-- PhoneInsert Screen -->
    <string name="entry_send_code">Send code</string>
    <string name="phone_number">Phone number</string>

    <!-- Otp Screen -->
    <string name="otp_verify">Verify</string>

    <!-- FillProfile Screen -->
    <string name="profile_save">@string/save</string>
    <string name="profile_first_name">@string/first_name</string>
    <string name="profile_last_name">@string/last_name</string>
    <string name="profile_email">@string/email</string>
    <string name="profile_birthdate">@string/birthdate</string>

    <!-- Errors -->
    <string name="error_default">Error occurred</string>
    <string name="error_invalid_phone">Invalid phone number</string>
    <string name="error_invalid_otp">Invalid Verification Code</string>
    <string name="error_timeout">Too many requests. Try again later</string>

    <!-- Menu items -->
    <string name="tab_dashboard">Dashboard</string>
    <string name="tab_records">Records</string>
    <string name="tab_profile">Profile</string>

    <string name="option_pvt">PVT</string>
    <string name="error_app_unauthorized">Something went wrong. Try again later.</string>
    <string name="error_api_missing">Google Play Services missing</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_records">Records</string>
    <string name="screen_add_record">Add record</string>

    <string name="header_caffeine_consumption">Caffeine consumption</string>
    <string name="header_caffeine_prediction">Predictions</string>
    <string name="label_size">Size</string>
    <string name="label_date">Date</string>
    <string name="label_time">Time</string>
    <string name="size_small_label">Small</string>
    <string name="size_small_amount">100ml</string>
    <string name="size_medium_label">Medium</string>
    <string name="size_medium_amount">200ml</string>
    <string name="size_large_label">Large</string>
    <string name="size_large_amount">400ml</string>
    <string name="label_unit_ml">ml</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_record_title">Select your beverage</string>
    <string name="label_unit_mg">mg</string>
    <string name="add_record_confirm">Confirm</string>
    <string name="error_beverage_not_selected">No beverage selected</string>
    <string name="error_amount_not_selected">Amount not selected.</string>

</resources>
