<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".entry.signup.FillProfileFragment">
    
    <data>
        <variable
            name="viewModel"
            type="ro.fmi.ip.trei.coffeetracker.entry.signup.FillProfileViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/first_name_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/profile_first_name"
            android:inputType="textPersonName"
            android:text="@={viewModel.firstName}"
            app:layout_constraintBottom_toTopOf="@+id/last_name_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <EditText
            android:id="@+id/last_name_edit"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:ems="10"
            android:hint="@string/profile_last_name"
            android:inputType="textPersonName"
            android:text="@={viewModel.lastName}"
            app:layout_constraintBottom_toTopOf="@+id/date_edit"
            app:layout_constraintEnd_toEndOf="@+id/first_name_edit"
            app:layout_constraintStart_toStartOf="@+id/first_name_edit"
            app:layout_constraintTop_toBottomOf="@+id/first_name_edit" />

        <EditText
            android:id="@+id/date_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/profile_birthdate"
            android:inputType="date"
            android:text="@={viewModel.birthDate}"
            app:layout_constraintBottom_toTopOf="@+id/save_button"
            app:layout_constraintEnd_toEndOf="@+id/last_name_edit"
            app:layout_constraintStart_toStartOf="@+id/last_name_edit"
            app:layout_constraintTop_toBottomOf="@+id/last_name_edit" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/profile_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>
</layout>